Sun Dec  1 00:00:25 1996  Tom Tromey  <tromey@cygnus.com>

	* PLUGIN/greet: Removed.
	* Makefile.am, aclocal.m4: New files.
	* configure.in: Updated for Automake.

Wed Nov 27 22:16:32 1996  Jim Blandy  <jimb@baalperazim.frob.com>

	* PLUGIN/guile.config (xtra_dependencies): Add final newline.

Sun Oct 27 01:27:24 1996  Gary Houston  <ghouston@actrix.gen.nz>

	* rgx.c (scm_regex_error): use SCM_SYMBOL to declare
 	scm_regex_error_key.

Mon Oct 14 04:47:32 1996  Gary Houston  <ghouston@actrix.gen.nz>

	* Makefile.in (depends): add -I.. to gcc flags.  Make the addition
	of dependencies to Makefile.in automatic.  Update the dependencies.

Mon Oct 14 06:08:18 1996  Mikael Djurfeldt  <mdj@woody.nada.kth.se>

	* rgx.c (scm_regex_error): Renamed lgh_error --> scm_error.
	(I suppose we have to do this until lgh is finished.)

Sun Oct 13 08:50:08 1996  Gary Houston  <ghouston@actrix.gen.nz>

	* rxposix.c (rx_regexec): was returning REG_NOMATCH if anchored,
 	which breaks REG_NEWLINE.  Instead, if rules->newline_anchor is
 	set then search for the next '\n'.

Thu Oct 10 17:50:24 1996  Jim Blandy  <jimb@totoro.cyclic.com>

	* Makefile.in (headers): Include rgx.h in the distribution.

Sun Oct  6 06:20:46 1996  Gary Houston  <ghouston@actrix.gen.nz>

	* rgx.c (scm_regexec): Changed the default return type to be
 	similar to regexec in guile-iii: a newly allocated vector with
 	match indices.  This provides all the information required: the
 	justification for the all the other return types is presumably
 	efficiency.  A list of strings is now returned by passing a string
 	for match_pick.

	See ../doc/regex.txt.

	* rgx.h: new file.

	* rgx.c (scm_init_rgx): intern various regexp control symbols,
	REG_EXTENDED etc.
	Use K&R function definitions, include rgx.h.

Thu Oct  3 00:37:59 1996  Jim Blandy  <jimb@totoro.cyclic.com>

	* rgx.c (print_regex_t, print_dfa_t): Change 'writing' argument to
	be a general print state, in accordance with new smob interface.
